applications/adguard-home/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: adguard-home-http-https-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
