applications/adguard-home/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      # nodeSelector is needed to retrieve real client ip
#      nodeSelector:
#        kubernetes.io/hostname: optiplex-3080
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
          imagePullPolicy: IfNotPresent
          command:
            - "sh"
            - "-c"
            - >
              cp /etc/adguard/conf/AdGuardHome.yaml /opt/adguardhome/conf &&
              sleep 10 &&
              /opt/adguardhome/AdGuardHome --no-check-update --config /opt/adguardhome/conf/AdGuardHome.yaml --work-dir /opt/adguardhome/work
          ports:
            - containerPort: 53 # DNS port (UDP)
            - containerPort: 67 # DHCP port (UDP), if enabled
            - containerPort: 80 # Web UI port (TCP)
            - containerPort: 3000 # ?
          volumeMounts:
            - mountPath: /etc/adguard/conf/AdGuardHome.yaml
              name: adguard-home-config
              subPath: AdGuardHome.yaml
#            - name: adguard-home-storage
#              mountPath: /opt/adguardhome/work
      volumes:
        - name: adguard-home-config
          configMap:
            name: adguard-home-config
            items:
              - key: AdGuardHome.yaml
                path: AdGuardHome.yaml
#        - name: adguard-home-storage
#          persistentVolumeClaim:
#            claimName: adguard-home-pvc
