applications/adguard-home/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  internalTrafficPolicy: Local
  selector:
    app: adguard-home
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 100
      targetPort: 80
    - name: http1
      protocol: TCP
      port: 102
      targetPort: 3000
  type: LoadBalancer
