applications/adguard-home/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: adguard-home-adguard-home-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - adguard-home.tryrocket.cloud
      secretName: tryrocket-cloud-tls
  rules:
    - host: adguard-home.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  name: http
